WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220001
REGRESSION(
r270638
) decidePolicyForNewWindowAction should have non-null request
https://bugs.webkit.org/show_bug.cgi?id=220001
Summary
REGRESSION(r270638) decidePolicyForNewWindowAction should have non-null request
Alex Christensen
Reported
2020-12-17 19:13:35 PST
REGRESSION(
r270638
) decidePolicyForNewWindowAction should have non-null request
Attachments
Patch
(5.25 KB, patch)
2020-12-17 19:15 PST
,
Alex Christensen
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2020-12-17 19:15:39 PST
Created
attachment 416489
[details]
Patch
Alex Christensen
Comment 2
2020-12-17 19:25:06 PST
r270962
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug