REGRESSION(r270638) decidePolicyForNewWindowAction should have non-null request https://bugs.webkit.org/show_bug.cgi?id=220001 Source/WebKit:

<rdar://72436824>

Reviewed by Tim Horton.

A ResourceRequest was used after being moved in the super old C SPI that we need to remove,
but to keep our client functioning correctly until they do we copy the ResourceRequest instead of moving it.
Covered by an API test.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::decidePolicyForNewWindowAction):

Tools:


Reviewed by Tim Horton.

* TestWebKitAPI/Tests/WebKitCocoa/DecidePolicyForNavigationAction.mm:
(TEST):



Canonical link: https://commits.webkit.org/232584@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270962 268f45cc-cd09-0410-ab3c-d52691b4dbfc